// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gRPC Example should fetch movies by cast as a subscription correctly: movies-by-cast-grpc-example-result-1 1`] = `
Object {
  "done": false,
  "value": Object {
    "data": Object {
      "exampleSearchMoviesByCast": Object {
        "cast": Array [
          "Tom Cruise",
          "Simon Pegg",
          "Jeremy Renner",
        ],
        "name": "Mission: Impossible Rogue Nation",
        "rating": 0.9700000286102295,
        "year": 2015n,
      },
    },
  },
}
`;

exports[`gRPC Example should fetch movies by cast as a subscription correctly: movies-by-cast-grpc-example-result-2 1`] = `
Object {
  "done": false,
  "value": Object {
    "data": Object {
      "exampleSearchMoviesByCast": Object {
        "cast": Array [
          "Tom Cruise",
          "Simon Pegg",
          "Henry Cavill",
        ],
        "name": "Mission: Impossible - Fallout",
        "rating": 0.9300000071525574,
        "year": 2018n,
      },
    },
  },
}
`;

exports[`gRPC Example should generate correct schema: grpc-schema 1`] = `
"\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

enum ConnectivityState {
  CONNECTING
  IDLE
  READY
  SHUTDOWN
  TRANSIENT_FAILURE
}

enum Genre {
  ACTION
  DRAMA
  UNSPECIFIED
}

\\"\\"\\"movie message payload\\"\\"\\"
type Movie {
  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  genre: Genre
  name: String
  rating: Float
  time: google_protobuf_Timestamp
  year: BigInt
}

input MovieRequest_Input {
  movie: Movie_Input
}

\\"\\"\\"movie message payload\\"\\"\\"
input Movie_Input {
  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  genre: Genre
  name: String
  rating: Float
  time: google_protobuf_Timestamp_Input
  year: BigInt
}

\\"\\"\\"movie result message, contains list of movies\\"\\"\\"
type MoviesResult {
  \\"\\"\\"list of movies\\"\\"\\"
  result: [Movie]
}

type Query {
  anotherExampleConnectivityState(tryToConnect: Boolean): ConnectivityState

  \\"\\"\\"get all movies\\"\\"\\"
  anotherExampleGetMovies(input: MovieRequest_Input): MoviesResult
  exampleConnectivityState(tryToConnect: Boolean): ConnectivityState

  \\"\\"\\"get all movies\\"\\"\\"
  exampleGetMovies(input: MovieRequest_Input): MoviesResult
}

input SearchByCastRequest_Input {
  castName: String
}

type Subscription {
  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  anotherExampleSearchMoviesByCast(input: SearchByCastRequest_Input): Movie

  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  exampleSearchMoviesByCast(input: SearchByCastRequest_Input): Movie
}

type google_protobuf_Timestamp {
  nanos: Int
  seconds: BigInt
}

input google_protobuf_Timestamp_Input {
  nanos: Int
  seconds: BigInt
}"
`;

exports[`gRPC Example should get movies correctly: get-movies-grpc-example-result 1`] = `
Object {
  "data": Object {
    "exampleGetMovies": Object {
      "result": Array [
        Object {
          "cast": Array [
            "Leonardo DiCaprio",
            "Jonah Hill",
            "Margot Robbie",
          ],
          "name": "The Wolf of Wall Street",
          "rating": 0.7799999713897705,
          "time": Object {
            "seconds": 1608422400000n,
          },
          "year": 2013n,
        },
      ],
    },
  },
}
`;
